@@ -58,6 +58,18 @@ int step2tpc(int step, int alter)
       };
 
 //---------------------------------------------------------
+//   tpc2step
+//---------------------------------------------------------
+
+int tpc2step(int tpc)
+      {
+      // 14 - C
+      // 15 % 7 = 1
+      static const int steps[7] = { 3, 0, 4, 1, 5, 2, 6 };
+      return steps[(tpc+1) % 7];
+      }
+
+//---------------------------------------------------------
 //   step2tpc
 //---------------------------------------------------------
 
@@ -100,18 +112,6 @@ int tpc2pitch(int tpc)
             abort();
             }
       return pitches[tpc];
-      }
-
-//---------------------------------------------------------
-//   tpc2step
-//---------------------------------------------------------
-
-int tpc2step(int tpc)
-      {
-      // 14 - C
-      // 15 % 7 = 1
-      static const int steps[7] = { 3, 0, 4, 1, 5, 2, 6 };
-      return steps[(tpc+1) % 7];
       }
 
 //---------------------------------------------------------
